feat: Initialize iOS project files and implement authentication components
- Added Info.plist and SplashScreen.storyboard for iOS app configuration.
- Created Expo.plist for Expo updates configuration.
- Implemented bridging header for Swift interoperability.
- Added entitlements file for app capabilities.
- Developed AuthLayout, LoaderScreen, and OnboardingLayout components for user authentication flows.
- Implemented API utility functions for handling API requests and error management.
- Created authentication context with sign-in, sign-up, and token management functionalities.
- Defined user and authentication schemas for API responses.
- Established FastAPI endpoints for user authentication and profile management.
- Set up database connection and user model for persistence.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,11 +26,11 @@
     "prepare": "husky"
   },
   "resolutions": {
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-refresh": "^0.14.0",
-    "react-native-svg": "15.11.2",
-    "react-native-web": "~0.19.12"
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.24.6",
