--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - ./services/api:/app
     environment:
       DATABASE_URL: postgresql://postgres:postgres@db:5432/postgres
-      CORS_ORIGINS: http://localhost:19006,http://localhost:8081
+      CORS_ORIGINS: http://localhost:19000,http://localhost:19006,http://localhost:8081
       APP_ENV: local
       API_HOST: 0.0.0.0
       API_PORT: 8000
