--- a/frontend/apps/expo/tsconfig.json
+++ b/frontend/apps/expo/tsconfig.json
@@ -4,7 +4,10 @@
     "app/**/*.ts",
     "app/**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/types.d.ts"
   ],
   "compilerOptions": {
     "composite": true,
