feat: Implement admin authentication and management features, including login, user roles, and leads management

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,10 +22,12 @@ services:
       - ./services/api:/app
     environment:
       DATABASE_URL: postgresql://postgres:postgres@db:5432/postgres
-      CORS_ORIGINS: http://localhost:19000,http://localhost:19006,http://localhost:8081
+      CORS_ORIGINS: http://localhost:19000,http://localhost:19006,http://localhost:8081,http://localhost:3000
       APP_ENV: local
       API_HOST: 0.0.0.0
       API_PORT: 8000
+      ADMIN_EMAIL: ${ADMIN_EMAIL:-admin@richharbor.com}
+      ADMIN_PASSWORD: ${ADMIN_PASSWORD:-1q2w3e}
     depends_on:
       - db
 
