--- a/frontend/apps/next/package.json
+++ b/frontend/apps/next/package.json
@@ -19,6 +19,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
     "tamagui": "^1.141.5",
     "vercel": "latest"
