--- a/frontend/apps/next/package.json
+++ b/frontend/apps/next/package.json
@@ -14,13 +14,20 @@
     "@tamagui/config": "^1.141.5",
     "@tamagui/next-theme": "^1.141.5",
     "app": "0.0.0",
+    "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.441.0",
     "next": "14.2.14",
+    "postcss": "^8.4.47",
     "raf": "^3.4.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^3.4.13",
     "tamagui": "^1.141.5",
     "vercel": "latest"
   },
