--- a/front-end/mobile-expo/app.json
+++ b/front-end/mobile-expo/app.json
@@ -11,7 +11,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#0B0B0F"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -19,7 +21,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#0B0B0F"
-      }
+      },
+      "package": "com.anonymous.mobileexpo"
     },
     "web": {
       "favicon": "./assets/favicon.png"
