--- a/front-end/mobile-expo/package.json
+++ b/front-end/mobile-expo/package.json
@@ -25,7 +25,8 @@
   "devDependencies": {
     "@babel/core": "^7.24.6",
     "@types/react": "~19.1.4",
-    "typescript": "~5.9.2",
-    "tailwindcss": "^3.4.17"
+    "babel-preset-expo": "^54.0.9",
+    "tailwindcss": "^3.4.17",
+    "typescript": "~5.9.2"
   }
 }
