--- a/front-end/mobile-expo/tsconfig.json
+++ b/front-end/mobile-expo/tsconfig.json
@@ -5,5 +5,9 @@
     "noEmit": true,
     "jsx": "react-native"
   },
-  "include": ["**/*.ts", "**/*.tsx"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "nativewind-env.d.ts"
+  ]
 }
