--- a/front-end/mobile-expo/package.json
+++ b/front-end/mobile-expo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mobile-expo",
+  "name": "RichHarbor",
   "version": "0.1.0",
   "private": true,
   "main": "index.js",
@@ -18,6 +18,7 @@
     "axios": "^1.13.2",
     "expo": "^54.0.0",
     "expo-local-authentication": "^17.0.8",
+    "expo-secure-store": "^15.0.8",
     "expo-status-bar": "~3.0.9",
     "nativewind": "^4.1.23",
     "react": "19.1.0",
@@ -30,12 +31,15 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.24.6",
+    "@babel/helper-validator-identifier": "^7.28.5",
     "@types/react": "~19.1.4",
     "babel-preset-expo": "^54.0.9",
+    "shebang-command": "^2.0.0",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.9.2"
   }
