--- a/front-end/mobile-expo/eas.json
+++ b/front-end/mobile-expo/eas.json
@@ -15,7 +15,10 @@
       }
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "env": {
+        "EXPO_PUBLIC_API_URL": "https://api.richharbor.com/v1"
+      }
     }
   },
   "submit": {
