--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # env
+# (Uncommented manually to allow push as per user request)
 .env
 .env.*
 
@@ -22,5 +23,12 @@ dist/
 # mac
 .DS_Store
 
-#github
+# github
 .github/
+
+# terraform
+.terraform/
+*.tfstate
+*.tfstate.backup
+.terraform.lock.hcl
+*.pem
