--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,19 +1,18 @@
 events {}
 
 http {
-    upstream rhserver {
-        server rhserver:5003;
-    }
-
-    upstream web-admin {
-        server web-admin:3000;
-    }
 
     server {
         listen 80;
 
+        # Docker internal resolver
+        resolver 127.0.0.11 valid=30s;
+
+        set $upstream_server rhserver;
+        set $upstream_admin web-admin;
+
         location /api {
-            proxy_pass http://rhserver;
+            proxy_pass http://$upstream_server:5003;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -21,7 +20,7 @@ http {
         }
 
         location /v1 {
-            proxy_pass http://rhserver;
+            proxy_pass http://$upstream_server:5003;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -29,7 +28,7 @@ http {
         }
 
         location / {
-            proxy_pass http://web-admin;
+            proxy_pass http://$upstream_admin:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
