--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,8 +92,10 @@ services:
     image: nginx:latest
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - ./docker/nginx.conf:/etc/nginx/nginx.conf:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on:
       - rhserver
       - web-admin
