--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,31 +1,57 @@
 events {}
 
 http {
+    resolver 127.0.0.11 valid=30s;
+    
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
+    # Redirect HTTP to HTTPS
     server {
         listen 80;
+        server_name api.richharbor.com admin.richharbor.com;
+        return 301 https://$host$request_uri;
+    }
 
-        # Docker internal resolver
-        resolver 127.0.0.11 valid=30s;
+    # API - api.richharbor.com
+    server {
+        listen 443 ssl;
+        server_name api.richharbor.com;
+
+        ssl_certificate /etc/letsencrypt/live/api.richharbor.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/api.richharbor.com/privkey.pem;
 
         set $upstream_server rhserver;
+
+        location / {
+            proxy_pass http://$upstream_server:5003;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # CORS Preflight
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH';
+                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+        }
+    }
+
+    # Admin UI - admin.richharbor.com
+    server {
+        listen 443 ssl;
+        server_name admin.richharbor.com;
+
+        ssl_certificate /etc/letsencrypt/live/api.richharbor.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/api.richharbor.com/privkey.pem;
+
         set $upstream_admin web-admin;
-
-        location /api {
-            proxy_pass http://$upstream_server:5003;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        location /v1 {
-            proxy_pass http://$upstream_server:5003;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
 
         location / {
             proxy_pass http://$upstream_admin:3000;
