--- a/front-end/mobile-expo/package.json
+++ b/front-end/mobile-expo/package.json
@@ -17,9 +17,11 @@
     "@react-navigation/native-stack": "^7.3.10",
     "axios": "^1.13.2",
     "expo": "^54.0.0",
+    "expo-blur": "~15.0.8",
     "expo-local-authentication": "^17.0.8",
     "expo-secure-store": "^15.0.8",
     "expo-status-bar": "~3.0.9",
+    "lucide-react-native": "^0.562.0",
     "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-async-hook": "3.6.1",
@@ -27,9 +29,11 @@
     "react-native": "^0.81.5",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1",
     "zustand": "^5.0.9"
