--- a/rhserver/package.json
+++ b/rhserver/package.json
@@ -23,6 +23,7 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
+    "expo-server-sdk": "^4.0.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
