--- a/front-end/mobile-expo/app.json
+++ b/front-end/mobile-expo/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Rhfin",
+    "name": "Rfin",
     "slug": "rfin-mobile",
     "version": "0.1.0",
     "orientation": "portrait",
