--- a/front-end/mobile-expo/app.json
+++ b/front-end/mobile-expo/app.json
@@ -24,7 +24,15 @@
         "backgroundColor": "#0B0B0F"
       },
       "package": "com.rfin.app",
-      "googleServicesFile": "./google-services.json"
+      "googleServicesFile": "./google-services.json",
+      "permissions": [
+        "NOTIFICATIONS"
+      ],
+      "notification": {
+        "icon": "./assets/icon.png",
+        "color": "#ffffff",
+        "androidMode": "default"
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
