--- a/rhserver/package.json
+++ b/rhserver/package.json
@@ -25,11 +25,13 @@
     "dotenv": "^17.2.2",
     "expo-server-sdk": "^4.0.0",
     "express": "^5.1.0",
+    "ioredis": "^5.9.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
+    "rate-limiter-flexible": "^9.0.1",
     "sequelize": "^6.37.7",
     "web-push": "^3.6.7"
   },
