--- a/front-end/mobile-expo/package.json
+++ b/front-end/mobile-expo/package.json
@@ -16,13 +16,15 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "axios": "^1.13.2",
-    "expo": "^54.0.0",
+    "expo": "~54.0.31",
     "expo-blur": "~15.0.8",
     "expo-constants": "^18.0.12",
     "expo-device": "^8.0.10",
+    "expo-file-system": "~19.0.21",
     "expo-local-authentication": "^17.0.8",
-    "expo-notifications": "^0.32.15",
+    "expo-notifications": "~0.32.16",
     "expo-secure-store": "^15.0.8",
+    "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
     "lucide-react-native": "^0.562.0",
     "nativewind": "^4.1.23",
