icon color changes

--- a/front-end/mobile-expo/app.json
+++ b/front-end/mobile-expo/app.json
@@ -21,7 +21,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#0B0B0F"
+        "backgroundColor": "#FFFFFF"
       },
       "package": "com.rfin.app",
       "googleServicesFile": "./google-services.json",
