--- a/front-end/mobile-expo/app.json
+++ b/front-end/mobile-expo/app.json
@@ -27,17 +27,22 @@
       "googleServicesFile": "./google-services.json",
       "permissions": [
         "NOTIFICATIONS"
-      ],
-      "notification": {
-        "icon": "./assets/icon.png",
-        "color": "#ffffff",
-        "androidMode": "default"
-      }
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "owner": "varun2773",
+    "plugins": [
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/icon.png",
+          "color": "#ffffff",
+          "mode": "production"
+        }
+      ]
+    ],
     "extra": {
       "eas": {
         "projectId": "2880f08c-7da8-41ad-ab2e-17c13e10348f"
