--- a/rhserver/package.json
+++ b/rhserver/package.json
@@ -23,8 +23,8 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
-    "expo-server-sdk": "^4.0.0",
     "express": "^5.1.0",
+    "firebase-admin": "^13.6.0",
     "ioredis": "^5.9.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
