--- a/rhserver/package.json
+++ b/rhserver/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-pinpoint-sms-voice-v2": "^3.971.0",
     "@aws-sdk/client-s3": "^3.888.0",
     "@aws-sdk/client-sns": "^3.958.0",
     "aws-sdk": "^2.1693.0",
